fixed cards on safari

--- a/css/style.css
+++ b/css/style.css
@@ -254,6 +254,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden; }
     .card__side--front {
       background-color: #ffffff; }
