--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -17,6 +17,7 @@
         top: 0;
         left: 0;
 
+        -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
 
         &--front {
